[package]
name = "tauri-plugin-positioner"
version = "1.0.5"
description = "Position your windows at well-known locations."

  [package.authors]
  workspace = true

  [package.license]
  workspace = true

  [package.edition]
  workspace = true

  [package.rust-version]
  workspace = true

[dependencies]
serde_repr = "0.1"

  [dependencies.serde]
  workspace = true

  [dependencies.serde_json]
  workspace = true

  [dependencies.tauri]
  workspace = true

  [dependencies.log]
  workspace = true

  [dependencies.thiserror]
  workspace = true

[features]
system-tray = [ "tauri/system-tray" ]
